--- a/public/login/login.css
+++ b/public/login/login.css
@@ -1,6 +1,24 @@
 .loginWrapper {
 }
 .buttonContainer {
-  height: 200px;
+  height: 50px;
   width: 500px;
+}
+.Welcomebox {
+  background-color: white;
+  height: 500px;
+  width: 800px;
+  margin: auto;
+  border: 1px solid black;
+}
+.Welcomebox h1{
+  word-spacing: 30px;
+  margin: auto;
+  font-style: 600%;
+  color: grey;
+}
+.Welcomebox h2{
+  margin: auto;
+  font-style: 300%;
+  color: grey;
 }
