--- a/public/login/login.css
+++ b/public/login/login.css
@@ -14,14 +14,15 @@
 }
 .Welcomebox h1{
   letter-spacing: 10px;
-  margin-top: 100px;
+  margin-top: 120px;
   text-align: center;
-  font-style: 900%;
+  font-size: 350%;
   color: black;
 }
 .Welcomebox h2{
+  margin-top: 80px;
   text-align: center;
-  font-style: 500%;
+  font-size: 200%;
   color: black;
 }
 .button {
@@ -34,7 +35,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 20px;
-    margin: 4px 2px;
+    margin: 1px 30px;
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
