--- a/public/profile/profile.css
+++ b/public/profile/profile.css
@@ -1,13 +1,27 @@
 .profileWrapper {
-}
-#addJobContainer {
-}
-#addJobTitleContainer {
   display: inline-block;
 }
-#addJobSkillsContainer {
+#addJobForm {
+  display: inline-block;
+  background-color: yellow;
+}
+.addJobFormInput {
+  height: 30px;
+  width: 150px;
+  font-size: 12px;
+  color: lightgrey;
+  display: inline-block;
+}
+#addJobTitleContainer p {
+  width: 60px;
+  display: inline-block;
+}
+#addJobSkillsContainer p {
+  width: 60px;
+  display: inline-block;
 }
 #skillsListContainer {
+  display: inline-block;
   border-style: solid;
   border-width: 2px;
   border-color: #B21565;
