--- a/public/jobs/jobs.css
+++ b/public/jobs/jobs.css
@@ -6,9 +6,27 @@
   padding: 20px;
 }
 
-.button {
-  background-color: #FF0081;
+.inline {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.contactbutton {
+  background-color: #B21565;
+  border: none;
+  vertical-align: middle;
+  display: inline-block
+  border-radius: 6px;
   color: white;
   padding: 15px 32px;
   text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 1px 30px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
 }
