--- a/public/app.css
+++ b/public/app.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 html, body {
 	margin:0;
 	padding:0;
-	font-family: Helvetica;
+	font-family: 'Raleway', sans-serif;
 	background-color: #fff;
 }
