--- a/public/profile/profile.css
+++ b/public/profile/profile.css
@@ -1,26 +1,35 @@
 .profileWrapper {
-  display: inline-block;
+  width: 70%;
+  margin: auto;
 }
-#addJobForm {
+.addJobForm {
   display: inline-block;
-  background-color: yellow;
+  width: 40%;
+}
+.addJobFormLabel {
+  font-size: 14px;
+  width: 150px;
+  display: inline-block;
 }
 .addJobFormInput {
   height: 30px;
-  width: 150px;
+  width: 200px;
   font-size: 12px;
-  color: lightgrey;
+  color: grey;
   display: inline-block;
+  border-width: 0px;
+  border-bottom-width: 1px
 }
-#addJobTitleContainer p {
-  width: 60px;
-  display: inline-block;
+#addJobButton {
+  padding: 12px 24px;
+  font-size: 16px;
+  margin-top: 20px;
+  margin-left: 200px;
 }
-#addJobSkillsContainer p {
-  width: 60px;
-  display: inline-block;
-}
-#skillsListContainer {
+.skillsListContainer {
+  vertical-align: top;
+  margin-left: 50px;
+  width: 30%;
   display: inline-block;
   border-style: solid;
   border-width: 2px;
