--- a/public/login/login.css
+++ b/public/login/login.css
@@ -45,7 +45,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 20px;
-    margin: 1px 30px;
+    margin: 30px 30px;
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
@@ -64,4 +64,21 @@
   margin-left: 50px;
   font-size: 150%;
   color: black;
+}
+.addLoginLabel {
+  width: 150px;
+  display: inline-block;
+}
+.addLoginInput {
+  height: 30px;
+  width: 200px;
+  font-size: 12px;
+  color: grey;
+  display: inline-block;
+  border-width: 0px;
+  border-bottom-width: 1px
+}
+.addLinkedIn{
+  margin-top: auto;
+  margin-left: auto;
 }
