--- a/public/profile/profile.css
+++ b/public/profile/profile.css
@@ -13,7 +13,7 @@
 }
 .addJobFormInput {
   height: 30px;
-  width: 200px;
+  width: 220px;
   font-size: 12px;
   color: grey;
   display: inline-block;
@@ -37,4 +37,23 @@
 }
 #skillsList {
   list-style-type: none;
+}
+.searchResults {
+  display: inline-block;
+  width: 200px;
+  padding:10px;
+  margin-top: -3px;
+  box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.26);
+}
+.resultValue {
+  border: none;
+  display: block;
+  background-color: transparent;
+  font-size: 16px;
+  width: 100%;
+  border-radius: 4px;
+  padding: 7px;
+}
+.resultValue:hover {
+  background-color: #008075;
 }
