--- a/public/login/login.css
+++ b/public/login/login.css
@@ -59,26 +59,28 @@
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 .Loginbox h1{
-  margin-top: 70px;
-  margin-left: 50px;
-  margin-bottom: 60px;
+  margin-top: 40px;
+  margin-bottom: 30px;
   font-size: 300%;
-  font-style: bold;
+  font-weight: bold;
+  text-align: center;
   color: black;
 }
 .Loginbox h2{
-  margin-top: 10px;
-  margin-left: 50px;
-  font-size: 150%;
-  color: black;
+	margin-top: 40px;
+	margin-bottom: 10px;
+	margin-left: 30px;
+	width: auto;
+	font-size: 150%;
+	color: black;
 }
 .addLoginLabel {
   width: 150px;
-  display: inline-block;
+  /*display: inline-block;*/
 }
 .addLoginInput {
   height: 30px;
-  width: 200px;
+  width: 90%;
   font-size: 12px;
   color: grey;
   display: inline-block;
@@ -88,4 +90,24 @@
 .addLinkedIn{
   margin-top: auto;
   margin-left: auto;
+}
+.left-container {
+	width: calc(50% - 50px);
+    padding-left: 50px;
+	display: inline-block;
+	border-right: 2px solid rgba(0, 0, 0, 0.1);
+    margin-right: -2px;
+}
+.right-container {
+	width: 49%;
+	display: inline-block;
+	padding-top: 60px;
+	height: 340px;
+    vertical-align: top;
+    text-align: center;
+}
+.button#linkedin-btn {
+	line-height: 1.2;
+	background-color: #2196f3;
+    vertical-align: initial;
 }
