--- a/public/profile/profile.css
+++ b/public/profile/profile.css
@@ -4,6 +4,11 @@
 }
 .profileWrapper h1{
   margin-top: 5%;
+  margin-left: 12px;
+}
+.profileWrapper p {
+  margin-left: 16px;
+  font-size: 15px;
 }
 .addJobForm {
   display: inline-block;
