--- a/public/profile/profile.css
+++ b/public/profile/profile.css
@@ -22,7 +22,7 @@
 .addJobFormInput {
   height: 30px;
   width: 220px;
-  font-size: 12px;
+  font-size: 16px;
   color: grey;
   display: inline-block;
   border-width: 0px;
@@ -53,7 +53,7 @@
   margin-top: -3px;
   box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.26);
 }
-.resultValue {
+.resultValue, .addValue {
   border: none;
   display: block;
   background-color: transparent;
@@ -64,6 +64,11 @@
 }
 .resultValue:hover {
   background-color: #008075;
+  color: #FFF;
+}
+.addValue:hover {
+  background-color: #b21565;
+  color: #FFF;
 }
 .popup {
   position: fixed;
