--- a/public/profile/profile.css
+++ b/public/profile/profile.css
@@ -26,13 +26,14 @@
   color: grey;
   display: inline-block;
   border-width: 0px;
-  border-bottom-width: 1px
+  border-bottom-width: 1px;
+  margin-left: 15px;
 }
 #addJobButton {
   padding: 12px 24px;
   font-size: 16px;
   margin-top: 20px;
-  margin-left: 200px;
+  margin-left: 20px;
 }
 .skillsListContainer {
   vertical-align: top;
